--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="pt-br">
 
 <head>
-    <title>Sistema Agenda</title>
+    <title>System Schedule</title>
     <meta charset=utf-8>
     <meta name="viewport" content="width=device-width, initial-sacle=1">
-    <link rel="stylesheet" href="./styles/global.css">
+    <link rel="stylesheet" href="./src/global.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
@@ -15,7 +15,7 @@
         <header id="header">
             <nav>
                 <div class="teste">
-                   Bem vindo {{usuario}}
+                   Welcome {{usuario}}
                     <button>Sair</button>
                 </div>
             </nav>
@@ -28,7 +28,7 @@
         </div>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
-    <script src="scripts/main.js"></script>
+    <script src="./src/main.js"></script>
 </body>
     
 </html>
