--- a/index.html
+++ b/index.html
@@ -2,33 +2,62 @@
 <html lang="pt-br">
 
 <head>
-    <title>System Schedule</title>
+    <title>Sistema Agenda</title>
     <meta charset=utf-8>
     <meta name="viewport" content="width=device-width, initial-sacle=1">
-    <link rel="stylesheet" href="./src/global.css">
+    <link rel="stylesheet" href="./src/styles/global.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
 </head>
 
-<body> 
+<body>
     <main id="app">
         <header id="header">
             <nav>
-                <div class="teste">
-                   Welcome {{usuario}}
+                <div class="nav_header">
+                    <span>Welcome {{user}}</span>
                     <button>Sair</button>
                 </div>
             </nav>
         </header>
-    
+
+        <!-- Aqui é o container que separa o restante da paginá do header-->
         <div class="container">
+
+            <!-- Aqui é  o container central, aonde eu deixo o conteúdo no centro-->
             <div class="center_container">
-                    {{teste}}
+
+                <!--Aqui é card da esquerda-->
+                <div class="left_container">
+
+                     <!-- Aqui é a navbar do container left-->
+                    <nav class="nav_left">
+                        <div class="nav_1">
+                            Teste
+                        </div>
+                        <div class="nav_2">
+                            Teste
+                        </div>  
+                    </nav>
+
+                    <!-- Aqui é aonde fica os dados do left-->
+                    <div class="left_data">
+                        {{test}}
+                    </div>
+                </div>
+
+                <!-- Aqui é o card da direita-->
+                <div class="right_container">
+                    {{test}}
+                </div>
+
             </div>
         </div>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
-    <script src="./src/main.js"></script>
+    <script src="./src/scripts/main.js"></script>
 </body>
-    
+
 </html>
